--- a/maintenance.html
+++ b/maintenance.html
@@ -13,7 +13,7 @@
             <h2>This Website Is Under Maintenance</h2>
         </div>
         <div class="image">
-            <img src="/under-construction.png" alt="" class="gambar">
+            <img src="under-construction.png" alt="" class="gambar">
         </div>
         <div class="player">
             <p class="watch">Just Watch This Video Bellow</p>
